--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Test
-#site_url: https://docs.chiyo-chan.me
+site_url: https://rtd-mkdocs-typography-demo.readthedocs.io
 markdown_extensions:
   - admonition
 theme:
